# github-meili-search

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Readme.md
.sqlx/: query-83938219598867ebc92180f8bf75d565c497e331ff402cbb43b6448cb9ecb16b.json  query-9eccaf0122d8e55e5519b129d6bef5bfe23febede2f1fd16deee17ddbf581c86.json  query-caf5c1fdd45e971b043715b14644225f0c4c9e3efe732692cfc23a90ee56e07d.json
migrations/: 20240122213850_inital_migration.sql
src/: build.rs  db.rs  main.rs  meilisearch.rs
src/github/: issue_iterator.rs  mod.rs
