[package]
name = "github-meiliserarch"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = { version = "0.24.3", default-features = false }
octocrab = { version = "0.33.1", default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt"], default-features = false }
indicatif = { version = "0.17.7", default-features = false }
serde = { version = "1.0.195", features = ["derive"], default-features = false }
reqwest = { version = "0.11.23", features = ["json", "tokio-rustls"], default-features = false }
sqlx = { version = "0.7.3", features = ["sqlite", "chrono", "runtime-tokio-rustls", "migrate", "macros"], default-features = false }
clap = { version = "4.4.18", features = ["env", "derive", "std"], default-features = false }
