[package]
name = "github-meiliserarch"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = { version = "0.24.3", default-features = false }
octocrab = { version = "0.34.2", default-features = false, features = ["rustls","rustls-webpki-tokio", "timeout", "retry"] }
tokio = { version = "1.36.0", features = ["macros", "rt"], default-features = false }
indicatif = { version = "0.17.8", default-features = false }
serde = { version = "1.0.196", features = ["derive"], default-features = false }
reqwest = { version = "0.11.24", features = ["json", "tokio-rustls", "rustls-tls-webpki-roots"], default-features = false }
sqlx = { version = "0.7.3", features = ["sqlite", "chrono", "runtime-tokio-rustls", "migrate", "macros"], default-features = false }
clap = { version = "4.5.0", features = ["env", "derive", "std"], default-features = false }
chrono = { version = "0.4.34", default-features = false, features = [] }
pulldown-cmark = { version ="0.9.3", default-features = false }
ammonia = { version ="3.3.0", default-features = false }
